# sample-bank

./: README.md  TICKETS.md  pyproject.toml
backend/: .env  docker-compose-local.yaml  main.py  models.py  postgres.py  routes.py  settings.py  tests.py
infrastructure/: main.tf  providers.tf
